--- a/public/css/app.css
+++ b/public/css/app.css
@@ -73,7 +73,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #f8fafc;
-  background-image: url('https://wallpapercave.com/wp/heuAS0w.jpg')
+  background-image: url('https://wallpapercave.com/wp/heuAS0w.jpg');
+  overflow-y: hidden;
 }
 
 [tabindex="-1"]:focus {
@@ -4297,11 +4298,11 @@ input[type=button].btn-block {
 .nav {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
-  overflow: scroll;
+  overflow-y: auto;
+  height: 40em;
 }
 
 .nav-link {
