--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,7 +74,7 @@ body {
   text-align: left;
   background-color: #f8fafc;
   background-image: url('https://wallpapercave.com/wp/heuAS0w.jpg');
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 [tabindex="-1"]:focus {
@@ -228,6 +228,7 @@ img {
   margin-right: 2%;
   margin-bottom:2%;
   max-width: 350px;
+  max-height: 350px;
   padding: 0.5em 0 0 1em;
 }
 
